<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black">
        <ImageView
            android:paddingLeft="15dp"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/baseline_arrow_back_24"/>
        <TextView
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="25dp"
            android:hint="@string/connectez_vous"
            android:textColor="@color/white"/>

    </LinearLayout>
    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/identifiez_vous"
        android:paddingBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp">
        <ImageView
            android:maxHeight="55dp"
            android:maxWidth="55dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:src="@drawable/mailicon"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/darker_gray"
            android:paddingLeft="60dp"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp">
        <ImageView
            android:maxHeight="55dp"
            android:maxWidth="55dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:src="@drawable/lockicon"/>
        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/mot_de_passe"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingBottom="25dp"/>
    <Button
        android:id="@+id/loginbtn"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/rectangle"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/connectez_vous"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr_un_compte"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingTop="15dp"
        android:paddingBottom="30dp"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:gravity="center">
        <View
            android:layout_gravity="center"
            android:layout_width="190dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ou"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <View
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:src="@drawable/facebooklogoo" />

        <TextView
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuer_avec_facebook" />

    </LinearLayout>
</LinearLayout>
