<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black">
        <ImageView
            android:paddingLeft="15dp"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/flecheleft"/>
        <TextView
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="25dp"
            android:text="@string/cr_un_compte"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="100">
    <TextView
        android:layout_weight="5"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cr_un_compte"
        android:textSize="20dp" />
        <!--NOM-->
        <LinearLayout
            android:layout_weight="12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingBottom="15dp">
            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:src="@drawable/accounticon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:text="@string/nom"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingBottom="15dp">
            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:src="@drawable/baseline_phone_android_white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:hint="@string/pr_nom"/>
                hintcolor
        </LinearLayout>
        <LinearLayout
            android:layout_weight="12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingBottom="15dp">
            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:src="@drawable/mailicon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:text="@string/email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingBottom="15dp">
            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:src="@drawable/lockicon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:text="@string/mot_de_passe"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:paddingBottom="15dp">
            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:src="@drawable/phoneicon"/>

            <Spinner
                android:id="@+id/phone_spinner"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:text="@string/mobile"/>
        </LinearLayout>

    <Button
        android:layout_weight="7"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cr_un_compte"/>

    </LinearLayout>

</LinearLayout>
